# research-synergy

./: .env.example  .gardener-notes.md  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IDEAS.md  README.md  TODO.md
.claude/: settings.json
.claude/commands/: pre-commit.md
.claude/skills/: gsd-verify
.github/workflows/: rust.yml
.planning/: .continue-here.md  BUGFIX-STATUS.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: crawl-subcommand-db-flag.md  fetch-references-empty-url.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1.1-REQUIREMENTS.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/orbit-migration/: RUN-01-mistral-capability-profile.md
.planning/research/: ARCHITECTURE.md  BRAINSTORM-cross-field-transfer.md  CONVENTIONS.md  DRAFT-EXP-RS-20-prereg.md  DRAFT-EXP-RS-20.mistral-debrief.md  FEATURES.md  NEXT-SESSION.md  PHASE30-KICKOFF-PROMPT.md  PITFALLS.md  RS-DIRECTIONS-20260718.md  STACK.md  SUMMARY.md  THREAD.md
prototypes/: RAF_V01_RESULTS.md  SHEAF_V01_RESULTS.md  SHEAF_V02_RESULTS.md  build_bridge_corpus_openalex.py  build_modern_corpus.py  build_mvp_corpus.py  build_tfidf_graph.py  collect_tags.py  create_notebook.py  create_notebook_v02.py  create_notebook_v03.py  create_notebook_v04.py  embed_gate.py  embed_gate_selftest.py  embed_score.py  embed_toytest.py  exp16_extraction_prompt.md  exp17_tagging_prompt.md  hyde_prompt.md  hyde_prompt.sha256  hyde_score.py  hyde_toytest.py  kuramoto_lbd_v01.ipynb  kuramoto_lbd_v02.ipynb  kuramoto_lbd_v03.ipynb  kuramoto_lbd_v04.executed.ipynb  kuramoto_lbd_v04.ipynb  kuramoto_lbd_v05.py  kuramoto_lbd_v06.py  kuramoto_lbd_v07.py  methmesh_score.py  methmesh_toytest.py  raf_lbd_v01.ipynb  raf_lbd_v01.py  requirements-lock.txt  rs22_embed_null.py  rs22_gate.py  rs22_gate_selftest.py  rs22_judge_semantic.md  rs22_judge_semantic.sha256  (+41 more)
prototypes/data/: archetype_adjacency.json  archetype_adjacency.sha256  baseline_results.json  concept_aliases.json  cross_bridges_ground_truth.json  embed_model_manifest.json  embed_results_feynman.json  embed_results_modern.json  embed_toytest_pass.json  embed_verdict.json  feynman_10pair_papers.json  feynman_10pair_reactions.json  hopfield_spinglass_toy.json  hyde_hypotheticals_feynman.json  hyde_hypotheticals_feynman.sha256  hyde_results_feynman_gate.json  kuramoto_v02_golden_bridges.json  kuramoto_v05_results.json  kuramoto_v06_results.json  kuramoto_v07_results.json  mechanism_vocab.json  mechanism_vocab.sha256  mechanism_vocab_compact.json  methmesh_tags_feynman.json  methmesh_tags_modern.json  modern_lbd_pairs.json  modern_mvp_corpus.json  mvp_corpus.json  mvp_schemas.json  research_synergy_bridged.json  research_synergy_bridged_fine.json  research_synergy_bridged_fine_sheaf.json  research_synergy_kuramoto_full.json  research_synergy_modern.json  research_synergy_pre2015.json  rs22_clean_records_anchors_claude.json  rs22_constants.json  rs22_exclusion_ids.txt  rs22_manifest_anchors.json  rs22_manifest_judge_posctrl_claude.json  (+61 more)
results/: commission_history.jsonl
results/commission_research_2026-07-04/: REPORT.md
resyn-app/: Cargo.toml  Trunk.toml  index.html
resyn-app/src/: app.rs  lib.rs
resyn-app/src/components/: analysis_controls.rs  crawl_progress.rs  gap_card.rs  graph_controls.rs  heatmap.rs  mod.rs  search_bar.rs
resyn-app/src/graph/: canvas_renderer.rs  interaction.rs  kmeans.rs  label_collision.rs  layout_state.rs  lod.rs  mod.rs  renderer.rs  viewport_fit.rs  webgl_renderer.rs  worker_bridge.rs
resyn-app/src/layout/: drawer.rs  mod.rs  sidebar.rs
resyn-app/src/pages/: dashboard.rs  gaps.rs  graph.rs  methods.rs  mod.rs  open_problems.rs  papers.rs
resyn-app/src/server_fns/: analysis.rs  community.rs  gaps.rs  graph.rs  methods.rs  metrics.rs  mod.rs  papers.rs  problems.rs  similarity.rs
resyn-app/style/: main.css
resyn-core/: Cargo.toml
resyn-core/src/: error.rs  lib.rs  utils.rs
resyn-core/src/analysis/: aggregation.rs  highlight.rs  mod.rs
resyn-core/src/data_aggregation/: arxiv_api.rs  arxiv_utils.rs  chained_source.rs  html_parser.rs  inspirehep_api.rs  mod.rs  openalex_bulk.rs  openalex_source.rs  rate_limiter.rs  semantic_scholar_api.rs  text_extractor.rs  traits.rs
resyn-core/src/data_processing/: graph_creation.rs
resyn-core/src/database/: crawl_queue.rs  mod.rs  queries.rs  schema.rs
resyn-core/src/datamodels/: analysis.rs  community.rs  community_graph.rs  enrichment.rs  gap_finding.rs  graph_metrics.rs  llm_annotation.rs  mod.rs  paper.rs  progress.rs  similarity.rs
resyn-core/src/gap_analysis/: abc_bridge.rs  contradiction.rs  mod.rs  output.rs  similarity.rs
resyn-core/src/graph_analytics/: betweenness.rs  community.rs  mod.rs  pagerank.rs
resyn-core/src/llm/: claude.rs  gap_prompt.rs  noop.rs  ollama.rs  prompt.rs  traits.rs
resyn-core/src/nlp/: preprocessing.rs  tfidf.rs
resyn-core/tests/: aggregation_tests.rs  arxiv_text_extraction.rs  semantic_scholar_integration.rs
resyn-core/tests/fixtures/: arxiv_2503_18887_biblio.html
resyn-server/: Cargo.toml
resyn-server/src/: lib.rs  main.rs
resyn-server/src/commands/: analyze.rs  bulk_ingest.rs  crawl.rs  export.rs  mod.rs  serve.rs
resyn-server/src/visualization/: enrichment.rs  force_graph_app.rs  mod.rs
resyn-server/tests/: analysis_pipeline_test.rs
resyn-worker/: Cargo.toml
resyn-worker/src/: barnes_hut.rs  forces.rs  lib.rs
scripts/: crawl-feynman-pairs.sh  crawl-feynman-seeds.sh
src/: arxiv_api.rs  error.rs  lib.rs  main.rs  utils.rs  validation.rs
src/data_aggregation/: arxiv_api.rs  arxiv_source.rs  arxiv_utils.rs  html_parser.rs  mod.rs  pdf_parser.rs  search_query_handler.rs  text_extractor.rs  traits.rs
src/data_processing/: mod.rs  (+1 more)
tests/: arxiv_paper_aggregation.rs  html_parsing.rs  inspirehep_integration.rs
(+3763 files in other folders)
