[package]
name = "research_synergy"
version = "0.1.0"
edition = "2024"

[dependencies]
arxiv-rs = "0.1.5"
futures = "0.3.31"
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["full"] }
lopdf = "0.36.0"
reqwest = "0.12.15"
scraper = "0.23.1"
egui_graphs = {version="0.25.0", features=["events"]}
eframe = "0.31.1"
petgraph = { version="0.7.0", default-features = false, features = [
  "graphmap",
  "stable_graph",
  "matrix_graph",
  "serde-1",
]}
egui = "0.31.1"
crossbeam = "0.8.4"
rand = "0.9.0"
fdg = { git = "https://github.com/grantshandy/fdg" }
serde_json = "1.0"
