[package]
name = "research_synergy"
version = "0.1.0"
edition = "2024"

[dependencies]
arxiv-rs = "0.1.5"
futures = "0.3.31"
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["full"] }
reqwest = "0.12.15"
scraper = "0.23.1"
egui_graphs = { version = "0.25.0", features = ["events"] }
eframe = "0.31.1"
petgraph = { version = "0.7.0", default-features = false, features = [
  "graphmap",
  "stable_graph",
  "matrix_graph",
  "serde-1",
] }
egui = "0.31.1"
crossbeam = "0.8.4"
rand = "0.9.0"
fdg = { git = "https://github.com/grantshandy/fdg" }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
surrealdb = { version = "3", features = ["kv-mem", "kv-surrealkv"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
stop-words = "0.8"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
