[workspace]
members = ["resyn-core", "resyn-app", "resyn-server", "resyn-worker"]
resolver = "2"

[workspace.dependencies]
# Always-available (WASM-safe)
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
petgraph = { version = "0.7.0", default-features = false, features = [
    "graphmap",
    "stable_graph",
    "matrix_graph",
    "serde-1",
] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
stop-words = "0.8"
tracing = "0.1"
rand = "0.9.0"
anyhow = "1.0.97"

# Server-only (ssr-gated in resyn-core, direct in resyn-server)
governor = "0.10"
surrealdb = { version = "3", features = ["kv-mem", "kv-surrealkv"] }
reqwest = { version = "0.12.15", features = ["json"] }
async-trait = "0.1"
scraper = "0.23.1"
arxiv-rs = "0.1.5"
futures = "0.3.31"
tokio = { version = "1.44.1", features = ["full"] }

# Server binary deps
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0.3"
axum = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }

# getrandom - listed explicitly to enable wasm_js feature via resyn-app
getrandom = "0.3"

# Dev dependencies
wiremock = "0.6"
tokio-test = "0.4"

[profile.release]
opt-level = 3
