[package]
name = "resyn-app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
csr = ["leptos/csr"]
ssr = ["leptos/ssr", "dep:leptos_axum", "resyn-core/ssr", "dep:tokio", "dep:tracing", "dep:chrono"]

[dependencies]
resyn-core = { path = "../resyn-core" }
leptos = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos-use = { version = "0.18" }
codee = "0.3"
wasm-bindgen = "0.2"
getrandom = { workspace = true, features = ["wasm_js"] }
console_error_panic_hook = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, optional = true }
leptos_axum = { version = "0.8", optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
js-sys = "0.3"
futures = "0.3"
gloo-worker = { version = "0.5", features = ["futures"] }
resyn-worker = { path = "../resyn-worker" }
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "TextMetrics",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "MouseEvent",
  "PointerEvent",
  "WheelEvent",
  "EventTarget",
  "Worker",
  "WorkerGlobalScope",
  "DedicatedWorkerGlobalScope",
  "Document",
  "Window",
  "Element",
  "DomRect",
]
