[package]
name = "resyn-server"
version = "0.1.0"
edition = "2024"

[features]
ollama-test = []

[[bin]]
name = "resyn"
path = "src/main.rs"

[dependencies]
resyn-core = { path = "../resyn-core", features = ["ssr"] }
resyn-app = { path = "../resyn-app", features = ["ssr"] }
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = { version = "0.8" }
server_fn = { version = "0.8", features = ["axum-no-default"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
http = "1"
tower = "0.5"
